force-app/main/default/objects/EM_Report__c/EM_Report__c.object-meta.xml
<CustomObject>
    <label>EM_Report</label>
    <nameField>
        <displayFormat>REP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EM_Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>