force-app/main/default/objects/EM_Report__c/fields/EM_Expense__c.field-meta.xml
<CustomField>
    <fullName>EM_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EM_Expense</label>
    <referenceTo>EM_Expense__c</referenceTo>
    <relationshipLabel>EM_Reports</relationshipLabel>
    <relationshipName>EM_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>