force-app/main/default/objects/EM_Report__c/fields/EM_Report_Label__c.field-meta.xml
<CustomField>
    <fullName>EM_Report_Label__c</fullName>
    <label>Report Label</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>