force-app/main/default/objects/EM_Report__c/fields/EM_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>EM_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>