force-app/main/default/objects/EM_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <color>#33FF33</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <color>#FFCC33</color>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Reimbursed</fullName>
                <color>#009900</color>
                <label>Reimbursed</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#FF0000</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>