force-app/main/default/objects/EM_Report__c/listViews/EM_Reports_List.listView-meta.xml
<ListView>
    <fullName>EM_Reports_List</fullName>
    <columns>NAME</columns>
    <columns>EM_Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Reports List</label>
</ListView>